[project]
name = "graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-neo4j>=0.8.0",
    "langchain-openai>=1.1.7",
    "neo4j>=6.1.0",
    "python-dotenv>=1.2.1",
]
